--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,22 @@ path = "src/day02/main.rs"
 name = "day03"
 path = "src/day03/main.rs"
 
+[[bin]]
+name = "day04"
+path = "src/day04/main.rs"
+
+[[bin]]
+name = "day05"
+path = "src/day05/main.rs"
+
+[[bin]]
+name = "day06"
+path = "src/day06/main.rs"
+
+[[bin]]
+name = "day07"
+path = "src/day07/main.rs"
+
 [dependencies]
 regex = "1.11.1"
+regex_static = "0.1.1"
