--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,14 @@ path = "src/day06/main.rs"
 name = "day07"
 path = "src/day07/main.rs"
 
-[dependencies]
-regex = "1.11.1"
-regex_static = "0.1.1"
+[[bin]]
+name = "day08"
+path = "src/day08/main.rs"
+
+[[bin]]
+name = "day09"
+path = "src/day09/main.rs"
+
+[[bin]]
+name = "day10"
+path = "src/day10/main.rs"
