--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,5 +52,21 @@ path = "src/day11/main.rs"
 name = "day12"
 path = "src/day12/main.rs"
 
+[[bin]]
+name = "day13"
+path = "src/day13/main.rs"
+
+[[bin]]
+name = "day14"
+path = "src/day14/main.rs"
+
+[[bin]]
+name = "day15"
+path = "src/day15/main.rs"
+
+[[bin]]
+name = "day16"
+path = "src/day16/main.rs"
+
 [dependencies]
 num = "0.4.3"
