--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,5 +68,18 @@ path = "src/day15/main.rs"
 name = "day16"
 path = "src/day16/main.rs"
 
+[[bin]]
+name = "day17"
+path = "src/day17/main.rs"
+
+[[bin]]
+name = "day18"
+path = "src/day18/main.rs"
+
+[[bin]]
+name = "day19"
+path = "src/day19/main.rs"
+
 [dependencies]
 num = "0.4.3"
+rayon = "1.10.0"
