--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,10 @@ path = "src/day18/main.rs"
 name = "day19"
 path = "src/day19/main.rs"
 
+[[bin]]
+name = "day20"
+path = "src/day20/main.rs"
+
 [dependencies]
 num = "0.4.3"
 rayon = "1.10.0"
