--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,13 @@ path = "src/day22/main.rs"
 name = "day23"
 path = "src/day23/main.rs"
 
+[[bin]]
+name = "day24"
+path = "src/day24/main.rs"
+
+[[bin]]
+name = "day25"
+path = "src/day25/main.rs"
 
 [dependencies]
 itertools = "0.13.0"
